Rename EHI-350 to EHI-N* across all pages

--- a/climacoder.html
+++ b/climacoder.html
@@ -479,7 +479,7 @@
                     The places most affected by climate change are also the ones least studied. Too often, research only follows the money, and the Global South gets left behind. I don't want to wait for someone else to decide our struggles are "lucrative" enough to care about—so I'm working to build open, high-quality tools that Latin American communities can actually use to prepare for extreme heat.
                 </p>
                 <p>
-                    ClimaCoder applies the same EHI-350 physiological framework used for India to Central America
+                    ClimaCoder applies the same EHI-N* physiological framework used for India to Central America
                     and Mexico—regions where outdoor labor in agriculture, construction, and fishing exposes millions
                     to heat stress that existing indices dramatically undercount. Every dashboard, dataset, and
                     analysis we produce is open-access by default.
@@ -598,7 +598,7 @@
                 </div>
                 <div>
                     <div style="font-weight:700;color:#0066cc;font-size:0.85rem;text-transform:uppercase;letter-spacing:0.05em;margin-bottom:0.4rem">Heat Metric</div>
-                    <p style="margin:0;color:#555;line-height:1.7">Extended Heat Index (EHI-350) — physiological model solving coupled heat balance across core, skin, and environment</p>
+                    <p style="margin:0;color:#555;line-height:1.7">Extended Heat Index (EHI-N*) — physiological model solving coupled heat balance across core, skin, and environment</p>
                 </div>
                 <div>
                     <div style="font-weight:700;color:#0066cc;font-size:0.85rem;text-transform:uppercase;letter-spacing:0.05em;margin-bottom:0.4rem">Work Scenarios</div>
