--- a/climacoder/countries/guatemala.html
+++ b/climacoder/countries/guatemala.html
@@ -361,7 +361,7 @@
                 <a href="/research.html">Research</a>
                 <div class="dropdown-content">
                     <a href="/research/heatindex.html">Heat Index Calculator</a>
-                    <a href="/research.html#ehi350">EHI-350 Measurement</a>
+                    <a href="/research.html#ehi350">EHI-N* Measurement</a>
                     <a href="/research.html#publications">Publications</a>
                 </div>
             </div>
