--- a/research.html
+++ b/research.html
@@ -415,11 +415,11 @@
 
         <div class="project-list">
             <article class="project">
-                <h3><a href="/research/heatindex.html">Extended Heat Index (EHI-350): Redefining Heat Stress Measurement</a></h3>
+                <h3><a href="/research/heatindex.html">Extended Heat Index (EHI-N*): Redefining Heat Stress Measurement</a></h3>
                 <p class="project-org">India Energy & Climate Center (IECC), UC Berkeley</p>
                 <p>
                     Standard heat indices treat everyone the same—someone sitting indoors and a construction
-                    worker in direct sun get the same "feels like" temperature. The EHI-350 changes that. Built
+                    worker in direct sun get the same "feels like" temperature. The EHI-N* changes that. Built
                     on the JPL/NASA physiological model, it accounts for metabolic heat production (100–350 W/m²),
                     solar radiation, and the body's actual thermoregulatory limits—sweating capacity, vasodilation,
                     and core temperature thresholds.
@@ -448,7 +448,7 @@
                 <div class="project-links">
                     <a href="/research/heatindex.html" class="project-link">Interactive Calculator</a>
                     <a href="https://github.com/ekilic-coder/Heat-Alerts-EHI" target="_blank" class="project-link">India Heat Alerts API</a>
-                    <a href="https://github.com/ekilic-coder/ehi-350-validation" target="_blank" class="project-link">EHI-350 Validation</a>
+                    <a href="https://github.com/ekilic-coder/ehi-350-validation" target="_blank" class="project-link">EHI-N* Validation</a>
                     <a href="/research/publications.html" class="project-link" style="background:#555">Publications</a>
                 </div>
             </article>
