--- a/research/publications.html
+++ b/research/publications.html
@@ -478,7 +478,7 @@
                     <strong>Kilic, E.</strong> (2025, May). Master's thesis, University of California, Berkeley.
                 </div>
                 <p>
-                    Development and validation of the Extended Heat Index (EHI-350) for assessing occupational
+                    Development and validation of the Extended Heat Index (EHI-N*) for assessing occupational
                     heat stress in outdoor workers under extreme humid heat conditions.
                 </p>
                 <span class="status-badge thesis">Forthcoming May 2025</span>
@@ -565,7 +565,7 @@
                     UC Berkeley, 2024
                 </div>
                 <p>
-                    Research poster presenting EHI-350 validation and application to Indian heat stress assessment.
+                    Research poster presenting EHI-N* validation and application to Indian heat stress assessment.
                 </p>
                 <a href="https://docs.google.com/presentation/d/1cRFfIeABauwJsnLmcnBuD5hiNazLHEfWx2k-MN2or7I/edit?usp=sharing" target="_blank" class="publication-link">View Poster</a>
             </div>
