--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                 <p class="title">Research Scientist</p>
 
                 <div class="bio">
-                    <p>I am a Research Scientist at the India Energy & Climate Center (IECC) at the University of California, Berkeley. I hold a Master's degree in Environmental Engineering from UC Berkeley, where I developed the Extended Heat Index (EHI-350) metric to better measure extreme heat stress impacts on human health and labor productivity.</p>
+                    <p>I am a Research Scientist at the India Energy & Climate Center (IECC) at the University of California, Berkeley. I hold a Master's degree in Environmental Engineering from UC Berkeley, where I developed the Extended Heat Index (EHI-N*) metric to better measure extreme heat stress impacts on human health and labor productivity.</p>
 
                     <p>My current work focuses on understanding and addressing extreme heat vulnerability across diverse communities and geographies.</p>
                 </div>
@@ -457,7 +457,7 @@
                 <div class="research-card">
                     <h3>Extended Heat Index for India</h3>
                     <p class="research-org">India Energy & Climate Center (IECC), UC Berkeley</p>
-                    <p>Developing and applying the Extended Heat Index (EHI-350) framework to assess occupational heat stress risks across Indian districts. This work combines physiological heat stress modeling with climate data to provide actionable guidance for policymakers and public health officials on protecting workers and vulnerable populations from extreme heat.</p>
+                    <p>Developing and applying the Extended Heat Index (EHI-N*) framework to assess occupational heat stress risks across Indian districts. This work combines physiological heat stress modeling with climate data to provide actionable guidance for policymakers and public health officials on protecting workers and vulnerable populations from extreme heat.</p>
                     <a href="/research/heatindex.html" class="research-link">Learn More</a>
                 </div>
 
