Add live heat dashboards to all 8 country pages
Create shared heat-dashboard.js module that:
- Fetches live conditions via Open-Meteo Forecast API
- Pulls ERA5 historical data (5-year + 1960-present long-term)
- Loads CMIP6 climate projections (3 models to 2050)
- Computes heat index client-side (NWS/Steadman equation)
- Renders 6 interactive Plotly charts per country:
  - Current conditions card (temp, humidity, feels-like, heat index, risk level)
  - Seasonal heat profile (monthly avg max vs apparent temp)
  - Monthly peak apparent temperature heatmap
  - Danger days per year (days above 35/40/45C thresholds)
  - Long-term warming trend with linear regression
  - CMIP6 multi-model projections to 2050

All data loaded client-side from free APIs, no server needed.
Country coordinates: Belmopan, Guatemala City, Tegucigalpa,
San Salvador, Managua, San Jose, Panama City, Mexico City.

--- a/climacoder/countries/belize.html
+++ b/climacoder/countries/belize.html
@@ -567,6 +567,16 @@
             </p>
             <iframe src="../maps/web_maps/belize_2023-05_comparison.html" class="chart-container" style="height: 700px;"></iframe>
         </div>
+        <div class="dashboard-section" style="margin-top:3rem">
+            <h2 style="font-size:1.8rem;color:#1a1a1a;margin-bottom:1.5rem">Live Heat Dashboard</h2>
+            <div id="heat-dashboard"></div>
+            <div style="background:white;border-radius:12px;padding:1.5rem;box-shadow:0 4px 16px rgba(0,0,0,0.08);margin-top:1.5rem">
+                <p style="color:#555;line-height:1.7;margin:0;font-size:0.9rem">
+                    Live data via Open-Meteo (ERA5 reanalysis). Projections from CMIP6 HighResMIP.
+                    Heat index computed client-side using NWS/Steadman equation.
+                </p>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -585,6 +595,19 @@
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
         
+        // Load heat dashboard
+        var s1 = document.createElement("script");
+        s1.src = "https://cdn.plot.ly/plotly-2.35.2.min.js";
+        s1.onload = function() {
+            var s2 = document.createElement("script");
+            s2.src = "/assets/js/heat-dashboard.js";
+            s2.onload = function() {
+                HeatDashboard.init({ lat: 17.2510, lon: -88.7590, name: "Belize", containerId: "heat-dashboard" });
+            };
+            document.head.appendChild(s2);
+        };
+        document.head.appendChild(s1);
+
         function showTab(tabName) {
             // Hide all tab contents
             const contents = document.querySelectorAll('.tab-content');
